--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bigcommerce-cornerstone",
   "description": "The BigCommerce reference theme for the Stencil platform",
-  "version": "4.3.1",
+  "version": "4.4.0-rc.1",
   "private": true,
   "author": "BigCommerce",
   "license": "MIT",
